--- a/.gitignore
+++ b/.gitignore
@@ -66,7 +66,7 @@ ehthumbs.db
 Thumbs.db
 
 # Analysis outputs
-workflow_analysis/analysis_data/
+# workflow_analysis/analysis_data/
 workflow_analysis/workflow_spm_results/
 
 # Temporary files
